# Cardano-Mixer-Lib

./: README.md  cabal.project  cardano-mixer-common.cabal  cardano-mixer.cabal  hie.yaml
.devcontainer/: devcontainer.json
QAP-compilation/cardano-mixer/: MerkleWithdraw.circom  MerkleWithdraw.r1cs  MerkleWithdraw.sym  MerkleWithdraw.wasm  mimcsponge.circom
frontend/: cabal.project  cardano-mixer.cabal
plutus-code/Plutus/V1/Ledger/: Value.hs
plutus-code/PlutusTx/: Builtins.hs  Enum.hs  Eq.hs  Foldable.hs  IsData.hs  List.hs  Monoid.hs  Ord.hs  Prelude.hs  Ratio.hs  Semigroup.hs  Sqrt.hs
plutus-code/PlutusTx/Builtins/: Class.hs  Internal.hs
src/: API.hs  ClientLog.hs  Crypto.hs  MixerAPI.hs  MixerContractParams.hs  MixerContractsDefinition.hs  MixerFrontendContractParams.hs  MixerFrontendContracts.hs  MixerProofs.hs  MixerState.hs  MixerUserData.hs  Requests.hs
src/Configuration/: QAPConfig.hs
src/Crypto/: BLS12381.hs  Curve.hs  DFT.hs  Extension.hs  MerkleTree.hs  MiMC.hs  Polynomial.hs  R1CS.hs  ZKSNARK.hs  Zp.hs
src/MixerProofs/: Groth16.hs  SigmaProtocol.hs
src/MixerProofs/SigmaProtocol/: API.hs  OffChain.hs  OnChain.hs  Types.hs
src/Utils/: Common.hs  Plutus.hs
test/: Main.hs  Test.hs
zkSNARKs/: MerkleWithdraw-CRS-reduced.json
