cabal-version:      3.0
name:               cardano-mixer-common
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Vladimir Sinyakov
maintainer:         devteam@cardmix.io

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

flag testnet
    description:
        Builds executables for testnet.
    default: False
    manual: True

flag frontend
    description:
        Builds executables for the frontend.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall
      -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -fwarn-redundant-constraints
      -Widentities -rtsopts
      -- See Plutus Tx readme
      -fno-specialise -fno-strictness -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -- if flag(defer-plugin-errors)
    --   ghc-options:
        -fplugin-opt PlutusTx.Plugin:defer-errors

common lang-frontend
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable NoImplicitPrelude
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
library
  if flag(frontend)
    import: lang-frontend
    exposed-modules:
      ClientLog
      Configuration.QAPConfig
      Crypto
      Crypto.ZKSNARK
      Crypto.R1CS
      Crypto.MerkleTree
      Crypto.DFT
      Crypto.BLS12381
      Crypto.Curve
      Crypto.Extension
      Crypto.Polynomial
      Crypto.Zp
      MixerFrontendContracts
      MixerProofs
      MixerState
      MixerUserData
      Requests
      Utils.Common
    other-modules: 
      PlutusTx.Applicative
      PlutusTx.Base
      PlutusTx.Bool
      PlutusTx.Builtins
      PlutusTx.Builtins.Class
      PlutusTx.Builtins.Internal
      PlutusTx.Either
      PlutusTx.Enum
      PlutusTx.Eq
      PlutusTx.Foldable
      PlutusTx.Functor
      PlutusTx.Integer
      PlutusTx.Lattice
      PlutusTx.List
      PlutusTx.Maybe
      PlutusTx.Monoid
      PlutusTx.Numeric
      PlutusTx.Ord
      PlutusTx.Prelude
      PlutusTx.Ratio
      PlutusTx.Semigroup
      PlutusTx.Sqrt
      PlutusTx.These
      PlutusTx.Traversable
      PlutusTx.Utils
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      deepseq                                -any,
      directory                              -any,
      extra                                  -any,
      ghc-prim                               -any,
      hashable                               -any,
      memory                                 -any,
      openapi3                               -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      text                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any
    hs-source-dirs: src plutus-code
  else
    import: lang
    exposed-modules:
      ClientLog
      Configuration.QAPConfig
      Crypto
      Crypto.ZKSNARK
      Crypto.R1CS
      Crypto.MerkleTree
      Crypto.DFT
      Crypto.BLS12381
      Crypto.Curve
      Crypto.Extension
      Crypto.Polynomial
      Crypto.Zp
      MixerContractsDefinition
      MixerProofs
      MixerState
      MixerUserData
      Requests
      Utils.Common            
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      extra                                  -any,
      freer-extras                           -any,
      freer-simple                           -any,
      flat                                   -any,
      lens                                   -any,
      mtl                                    -any,
      openapi3                               -any,
      playground-common                      -any,
      plutus-contract                        -any,
      plutus-core                            -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-pab                             -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-use-cases                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      text                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any
    hs-source-dirs: src

test-suite crypto-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Other-Modules:        Test
  Build-Depends:
    base                                   -any,
    aeson                                  -any,
    bytestring                             -any,
    cardano-mixer-common                   -any,
    containers                             -any,
    QuickCheck                             -any,
    random                                 -any
    