cabal-version:      3.0

name:               cardano-mixer-common
version:            0.1.0.0
license:            Apache-2.0
license-files:      LICENSE

author:             Vladimir Sinyakov
maintainer:         devteam@cardmix.io

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual:  True

flag frontend
    description:
        Builds executables for the frontend.
    default: False
    manual:  True

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
    if flag(defer-plugin-errors)
      ghc-options:
        -fplugin-opt PlutusTx.Plugin:defer-errors

-- Language settings for the Reflex frontend
common lang-frontend
    default-language: Haskell2010
    default-extensions: 
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      ExplicitForAll
      GeneralizedNewtypeDeriving
      NoImplicitPrelude
      ScopedTypeVariables
      StandaloneDeriving
                         
    ghc-options:
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wunused-packages
                  
library
  if flag(frontend)
    import: lang-frontend
    exposed-modules:
      Crypto
      Crypto.ZKSNARK
      Crypto.R1CS
      Crypto.MerkleTree
      Crypto.MiMC
      Crypto.DFT
      Crypto.BLS12381
      Crypto.Curve
      Crypto.Extension
      Crypto.Polynomial
      Crypto.Zp
      MixerContractParams
      MixerProofs.Groth16
      MixerProofs.SigmaProtocol
      MixerState
      MixerUserData
      Utils.Common
    other-modules: 
      Plutus.V1.Ledger.Value
      PlutusTx.Applicative
      PlutusTx.Base
      PlutusTx.Bool
      PlutusTx.Builtins
      PlutusTx.Builtins.Class
      PlutusTx.Builtins.Internal
      PlutusTx.Either
      PlutusTx.Enum
      PlutusTx.Eq
      PlutusTx.Foldable
      PlutusTx.Functor
      PlutusTx.Integer
      PlutusTx.Lattice
      PlutusTx.List
      PlutusTx.Maybe
      PlutusTx.Monoid
      PlutusTx.Numeric
      PlutusTx.Ord
      PlutusTx.Prelude
      PlutusTx.Ratio
      PlutusTx.Semigroup
      PlutusTx.Sqrt
      PlutusTx.These
      PlutusTx.Traversable
      PlutusTx.Utils
    build-depends:
      base                          >= 4.7 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      deepseq                                -any,
      extra                                  -any,
      generic-arbitrary                      -any,
      ghc-prim                               -any,
      memory                                 -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      random                                 -any,
      text                                   -any
    hs-source-dirs: src plutus-code
  else
    import: lang
    exposed-modules:
      Crypto
      Crypto.ZKSNARK
      Crypto.R1CS
      Crypto.MerkleTree
      Crypto.MiMC
      Crypto.DFT
      Crypto.BLS12381
      Crypto.Curve
      Crypto.Extension
      Crypto.Polynomial
      Crypto.Zp
      MixerContractParams
      MixerProofs.Groth16
      MixerProofs.SigmaProtocol
      MixerState
      MixerUserData
      Utils.Common            
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      extra                                  -any,
      freer-extras                           -any,
      freer-simple                           -any,
      flat                                   -any,
      lens                                   -any,
      mtl                                    -any,
      openapi3                               -any,
      playground-common                      -any,
      plutus-contract                        -any,
      plutus-core                            -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-pab                             -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-use-cases                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      text                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any
    hs-source-dirs: src

test-suite crypto-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -rtsopts
  Main-Is:              Main.hs
  Other-Modules:        Test
  Build-Depends:
    base                                   -any,
    aeson                                  -any,
    bytestring                             -any,
    cardano-mixer-common                   -any,
    containers                             -any,
    QuickCheck                             -any,
    random                                 -any
    
