cabal-version:      3.0

name:               cardano-mixer-common
version:            0.1.0.0
license:            Apache-2.0
license-files:      LICENSE

author:             Vladimir Sinyakov
maintainer:         devteam@cardmix.io

flag frontend
    description:
        Builds executables for the frontend.
    default: False
    manual:  True

common lang
  default-language:   Haskell2010
  if flag(frontend)
  -- Language settings for the Reflex frontend
    default-extensions: 
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      ExplicitForAll
      GeneralizedNewtypeDeriving
      NoImplicitPrelude
      ScopedTypeVariables
      StandaloneDeriving
  else
  -- Plutus language settings
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code                     
    ghc-options:
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wunused-packages
                  
library
  import: lang
  exposed-modules:
    Crypto
    Crypto.ZKSNARK
    Crypto.R1CS
    Crypto.MerkleTree
    Crypto.MiMC
    Crypto.DFT
    Crypto.BLS12381
    Crypto.Curve
    Crypto.Extension
    Crypto.Polynomial
    Crypto.Zp
    MixerProofs.Groth16
    MixerProofs.SigmaProtocol
    Utils.Common
    Utils.Plutus
  build-depends:
    base                          >= 4.9 && < 5,
    aeson                                  -any,
    bytestring                             -any,
    containers                             -any,
    extra                                  -any,
    random                                 -any,
    text                                   -any,
    generic-arbitrary                      -any,
    QuickCheck                             -any
  if flag(frontend)
    other-modules:
      Plutus.V1.Ledger.Value
      PlutusTx.Applicative
      PlutusTx.Base
      PlutusTx.Bool
      PlutusTx.Builtins
      PlutusTx.Builtins.Class
      PlutusTx.Builtins.Internal
      PlutusTx.Either
      PlutusTx.Enum
      PlutusTx.Eq
      PlutusTx.Foldable
      PlutusTx.Functor
      PlutusTx.Integer
      PlutusTx.Lattice
      PlutusTx.List
      PlutusTx.Maybe
      PlutusTx.Monoid
      PlutusTx.Numeric
      PlutusTx.Ord
      PlutusTx.Prelude
      PlutusTx.Ratio
      PlutusTx.Semigroup
      PlutusTx.Sqrt
      PlutusTx.These
      PlutusTx.Traversable
      PlutusTx.Utils
    build-depends:
      deepseq                                -any,
      ghc-prim                               -any,
      memory                                 -any,
      prettyprinter                          -any
    hs-source-dirs: src plutus-code
  else
    build-depends:
      plutus-tx                              -any,
      plutus-ledger-api                      -any
    hs-source-dirs: src

test-suite crypto-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -rtsopts
  Main-Is:              Main.hs
  Other-Modules:        Test
  Build-Depends:
    base                                   -any,
    aeson                                  -any,
    bytestring                             -any,
    cardano-mixer-common                   -any,
    containers                             -any,
    QuickCheck                             -any,
    random                                 -any
    
