cabal-version:      3.0
name:               cardano-mixer-common
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Vladimir Sinyakov
maintainer:         devteam@cardmix.io

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable NoImplicitPrelude
                        -- ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: lang
    exposed-modules:
      ClientLog
      Configuration.QAPConfig
      Crypto
      Crypto.ZKSNARK
      Crypto.R1CS
      Crypto.MerkleTree
      Crypto.DFT
      Crypto.BLS12381
      Crypto.Curve
      Crypto.Extension
      Crypto.Polynomial
      Crypto.Zp
      MixerContractsDefinition
      MixerProofs
      MixerState
      MixerUserData
      Requests
      Utils.Common
    other-modules: 
      PlutusTx.Applicative
      PlutusTx.Base
      PlutusTx.Bool
      PlutusTx.Builtins
      PlutusTx.Builtins.Class
      PlutusTx.Builtins.Internal
      PlutusTx.Either
      PlutusTx.Enum
      PlutusTx.Eq
      PlutusTx.Foldable
      PlutusTx.Functor
      PlutusTx.Integer
      PlutusTx.Lattice
      PlutusTx.List
      PlutusTx.Maybe
      PlutusTx.Monoid
      PlutusTx.Numeric
      PlutusTx.Ord
      PlutusTx.Prelude
      PlutusTx.Ratio
      PlutusTx.Semigroup
      PlutusTx.Sqrt
      PlutusTx.These
      PlutusTx.Traversable
      PlutusTx.Utils
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bech32                                 -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      deepseq                                -any,
      directory                              -any,
      extra                                  -any,
      ghc-prim                               -any,
      hashable                               -any,
      memory                                 -any,
      openapi3                               -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      text                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any
    hs-source-dirs: ../src ../plutus-code
    
    
